# backend-wish-list

./: .env.example  .gitignore  .mcp.json  CHEATSHEET.md  CLAUDE.md  COMPLETION_PLAN.md  CURSOR_VALIDATION_PLAN_DETAILED.md  CURSOR_VALIDATION_PROMPTS.md  README.md  TESTING_DEPLOYMENT_SUMMARY.md  VALIDATION_REPORT.md  diagrams.md  pyproject.toml
.cursor/rules/: ai-integration.mdc  api-design.mdc  git-workflow.mdc  global.mdc
.github/: REVIEW_GUIDELINES.md
.github/workflows/: claude-code-review-enhanced.yml
api/: index.py
tests/: test_api.py
